# youtube-statistics

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  INSTALL.md  README.md  SETUP_INSTRUCTIONS.md  docker-compose.yml  main.py  pyproject.toml  query_subscriptions.py
domain/: __init__.py
domain/common/: __init__.py
domain/youtube/: __init__.py
exporters/: __init__.py  base.py  csv_exported.py  google_sheets_exported.py  json_exported.py  text_exported.py
exporters/factories/: __init__.py  analytics_report_factory.py  channel_factory.py  daily_metrics_factory.py  date_range_factory.py  geographic_metrics_factory.py  revenue_metrics_factory.py  subscription_metrics_factory.py  views_breakdown_factory.py
exporters/model_exporters/: __init__.py  analytics_report_exported.py  channel_exported.py  daily_metrics_exported.py  date_range_exported.py  geographic_metrics_exported.py  revenue_metrics_exported.py  subscription_metrics_exported.py  views_breakdown_exported.py
models/: __init__.py  channel.py  daily_metrics.py  geography.py  metrics.py  monthly_metrics.py  report.py  revenue.py  youtube_metrics.py
report/: __init__.py  base.py  google_sheets_report.py  json_report.py  json_report_factory.py  text_report.py  youtube_metrics_json_report.py
repositories/: __init__.py  base.py  file_repository.py
services/: __init__.py  analytics_service.py  youtube_api.py
telegram_bot/: README.md  __init__.py  auth.py  bot.py  config.py  youtube_stats.py
youtube/: __init__.py  youtube_api.py  youtube_metrics_factory.py  youtube_repository.py
(+75 files in other folders)
